# spin

./: Makefile
crates/app/src/: lib.rs
crates/loader/src/: local.rs
crates/locked-app/src/: locked.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/manifest/src/: compat.rs
crates/manifest/src/schema/: v2.rs
crates/trigger/: Cargo.toml
crates/trigger-http/src/: server.rs
crates/trigger/src/: cli.rs  lib.rs  stdio.rs
crates/world/: file.rs
docs/content/sips/: 000-app-config.md
examples/http-rust/: Cargo.toml  http_trigger.rs  platform.rs
examples/http-rust/src/: lib.rs
wit/preview2/: world.wit
