[package]
name = "logging"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "sync"] }
spin-app = { path = "../app" }
spin-core = { path = "../core" }
spin-world = { path = "../world" }
tracing = { workspace = true }
log = "0.4"
